--- a/src/index.html
+++ b/src/index.html
@@ -1508,8 +1508,7 @@
 			<div class="page" id="agriculture-page">
 				<div class="title">
 					<% archieml.story.agriculture.forEach(function(p) { %>
-					<p><%= p.title.slice(0,4)%><br>
-						<%= p.title.slice(4,)%></p>
+					<p><%= p.title%></p>
 					<% }); %>
 					<svg class="indi-svg" id="ag-svg" version="1.1" xmlns="http://www.w3.org/2000/svg"
 						xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="1800 820 80 100"
